# EmailScraper

./: main.py  order_links.py  pyproject.toml  requirements.txt  upload_file.py  utils.py
env/: pyvenv.cfg
feature_engineering/: email_scrap.py
tests/: test_feature.py
