[tool.poetry]
name = "emailscraperdashboard"
version = "0.1.0"
description = ""
authors = ["Walid <mohamed.w.lahyani@octo.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
streamlit = "^1.13.0"
importlib-resources = "^5.10.0"
beautifulsoup4 = "^4.11.1"
requests = "^2.28.1"
lxml = "^4.9.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
